# navigation_ros

./: .gitignore
deploy/ros_navigation_ws/: GuideDog_dengxin.sh  record_bag_all.sh  start_navigation_stair.sh
deploy/ros_navigation_ws/install/: .rosinstall  local_setup.sh  setup.fish  setup.sh
deploy/ros_navigation_ws/install/lib/costmap_2d/: costmap_2d_cloud  costmap_2d_node
deploy/ros_navigation_ws/install/lib/global_planner/: planner
deploy/ros_navigation_ws/install/lib/pkgconfig/: costmap_2d.pc  dynamic_obstacles.pc  global_planner.pc
deploy/ros_navigation_ws/install/share/dynamic_obstacles/cmake/: dynamic_obstacles-msg-paths.cmake  dynamic_obstaclesConfig.cmake
deploy/ros_navigation_ws/install/share/dynamic_obstacles/launch/: tracked_objects_to_obstacles.launch
deploy/ros_navigation_ws/script/: cmdvelTest.py  twistConvert.py
deploy/ros_navigation_ws/script/path_pub/: manual_waypoint_sender.py
deploy/ros_navigation_ws/script/path_pub/config/: all.yaml  start_stair.yaml
deploy/ros_navigation_ws_a1a2success/: README.md
deploy/ros_navigation_ws_a1a2success/ros_navigation_ws/: GuideDog_dengxin.sh  start_navigation.sh  start_navigation_C3.sh  start_navigation_dengxin.sh
deploy/ros_navigation_ws_a1a2success/ros_navigation_ws/install/: local_setup.fish
deploy/ros_navigation_ws_a1a2success/ros_navigation_ws/install/share/road_yield/: package.xml
deploy/ros_navigation_ws_a1a2success/ros_navigation_ws/install/share/road_yield/cmake/: road_yieldConfig.cmake
deploy/ros_navigation_ws_a1a2success/ros_navigation_ws/install/share/road_yield/config/path_a2/: road_yield.yaml
deploy/ros_navigation_ws_a1a2success/ros_navigation_ws/install/share/road_yield/config/path_a2_sim/: patrol_route.csv  road_boundaries.csv  yield_points.csv
deploy/ros_navigation_ws_a1a2success/ros_navigation_ws/install/share/road_yield/launch/: a1.launch  a2.launch  a2_sim.launch
deploy/ros_navigation_ws_a1a2success/ros_navigation_ws/script/: tracked_objects_test_publisher.py
deploy/ros_navigation_ws_a1a2success/ros_navigation_ws/script/motion_test/: get_pose.py  plot_vFollow.py
deploy/ros_navigation_ws_a1a2success/ros_navigation_ws/script/path_pub/: manual_waypoint_sender.py  move_base_path.py  new_path.py  new_path.yaml  stair_waypoint_runner.py
deploy/src/costmap_2d/include/costmap_2d/: external_map_layer.h
deploy/src/costmap_2d/plugins/: external_map_layer.cpp
deploy/src/move_base/include/move_base/: move_base.h
deploy/src/move_base/src/: move_base.cpp
deploy/src/omni_navigation/: CMakeLists.txt
deploy/src/omni_navigation/launch/: B4_dynamic_test.launch  move_base_dwa.launch  move_base_teb_dynamic.launch  pc2scan_ll.launch  real+perc.launch  real_navigation_ll_B4_kfq.launch  real_navigation_ll_C4_kfq.launch  sim_navigation.launch
deploy/src/omni_navigation/param/teb/: costmap_common_params_omni.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
deploy/src/omni_navigation/rviz/: move_base.rviz
deploy/src/pointcloud_to_laserscan/src/: pointcloud_to_laserscan_nodelet.cpp
deploy/src/road_yield/: CMakeLists.txt  README.md
deploy/src/road_yield/config/path_a1/: road_yield.yaml
deploy/src/road_yield/config/path_a2/: road_boundaries.csv
deploy/src/road_yield/include/road_yield/: avoidance_strategy.h  config_loader.h  detection_window.h  pose_provider.h  stair_controller.h  vehicle_monitor.h
deploy/src/road_yield/src/: config_loader.cpp  pose_provider.cpp  road_geometry.cpp  road_yield_manager.cpp  road_yield_node.cpp  vehicle_monitor.cpp
deploy/src/road_yield/test/: test_avoidance_strategy.cpp  test_config_loader.cpp  test_detection_window.cpp  test_road_geometry.cpp
deploy/src/road_yield/test/data/: missing_yield_config.yaml  partial_yield_config.yaml  patrol_only_config.yaml  stair_boundaries.csv  stair_config.yaml
script/: cmd_velTest.py  plot_vFollow.py  tracked_objects_test_publisher.py
script/liner/teb/: costmap_common_params_omni.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
script/path_pub/: new_path.py
script/path_pub/config/: new_path.yaml  patrol_waypoint_line_a4.csv
src/longdist_nav/dynamic_obstacles/: CMakeLists.txt
src/longdist_nav/dynamic_obstacles/launch/: teb_obstacle_adapter.launch
src/longdist_nav/dynamic_obstacles/src/: teb_obstacle_adapter.cpp
src/longdist_nav/neupan_service/: CMakeLists.txt  README.md  package.xml
src/longdist_nav/neupan_service/config/: limo.yaml
src/longdist_nav/neupan_service/launch/: limo.launch
src/longdist_nav/neupan_service/scripts/: run_conda.sh  server.py
src/longdist_nav/neupan_service/src/: local_planner.cpp
src/longdist_nav/road_yield/: CMakeLists.txt  README.md
src/longdist_nav/road_yield/config/: patrol_route.csv  road_yield.yaml  yield_points.csv
src/longdist_nav/road_yield/config/path_sim/: patrol.csv  road_boundaries.csv  road_yield.yaml  yield_points.csv
src/longdist_nav/road_yield/include/road_yield/: config_loader.h  navigation_client.h  pose_provider.h  road_geometry.h  road_yield_manager.h  vehicle_monitor.h
src/longdist_nav/road_yield/launch/: road_yield.launch
src/longdist_nav/road_yield/src/: config_loader.cpp  navigation_client.cpp  pose_provider.cpp  road_geometry.cpp  road_yield_manager.cpp  road_yield_node.cpp  stair_controller.cpp  vehicle_monitor.cpp
src/longdist_nav/road_yield/test/: test_config_loader.cpp  test_road_geometry.cpp
src/longdist_nav/road_yield/test/data/: stair_route.csv  stair_shelters.csv
src/longdist_nav/teb_obstacle_sim/: CMakeLists.txt  README.md  package.xml
src/longdist_nav/teb_obstacle_sim/launch/: simulator.launch  test.launch
src/longdist_nav/teb_obstacle_sim/scripts/: simulator.py
src/nav1/omni_navigation/launch/: move_base_neupan.launch  pc2scan_stair.launch
src/nav1/omni_navigation/param/small_dog/neupan/: move_base_params.yaml  (+1 more)
src/nav1/pointcloud_to_laserscan/: CMakeLists.txt
src/nav1/pointcloud_to_laserscan/include/pointcloud_to_laserscan/: pointcloud_to_laserscan_nodelet.h
src/sim/omni_gazebo/config/: rviz_config.rviz
(+70 files in other folders)
