<?xml version="1.0"?>
<package format="2">
  <name>teb_obstacle_sim</name>
  <version>0.0.1</version>
  <description>Simulate moving obstacles and publish them to TEB for navigation testing.</description>

  <maintainer email="allgo@todo.todo">allgo</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>costmap_converter</depend>
  <depend>geometry_msgs</depend>
  <depend>rospy</depend>
  <depend>visualization_msgs</depend>
</package>
